--- a/app/src/main/res/drawable/orange_bg_rounded_25.xml
+++ b/app/src/main/res/drawable/orange_bg_rounded_25.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="25dp"/>
-<!--    <solid android:color="@color/black" />-->
-    <stroke
-        android:width="2dp"
-        android:color="@color/black" />
+    <solid android:color="@color/colorPrimary" />
+<!--    <stroke-->
+<!--        android:width="2dp"-->
+<!--        android:color="@color/black" />-->
 </shape>
