--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="brown">#512603</color>
+    <color name="orange">#FF9035</color>
+    <color name="gray">#3A3A3A</color>
+    <color name="light_gray">#E0DDDA</color>
 </resources>
