--- a/app/src/main/res/layout/pembayaran1.xml
+++ b/app/src/main/res/layout/pembayaran1.xml
@@ -7,10 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        />-->
     <ScrollView
         android:layout_weight="1"
         android:layout_width="match_parent"
@@ -23,22 +19,21 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="153dp"
+                android:layout_height="102dp"
                 android:background="@drawable/header"
                 >
-
             </LinearLayout>
 
             <LinearLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
-                android:padding="10dp"
+                android:padding="20dp"
                 android:orientation="horizontal"
                 android:layout_marginRight="24dp"
                 android:layout_marginLeft="24dp"
                 android:layout_marginTop="-96dp"
                 android:background="@drawable/splash"
                 android:layout_width="match_parent"
-                android:layout_height="163dp"
+                android:layout_height="wrap_content"
                 android:paddingStart="20dp"
                 > <!-- Ini akan membuat semua child view berada di tengah -->
 
@@ -46,7 +41,7 @@
                     android:layout_width="141dp"
                     android:layout_height="86dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/ic_launcher_background"
+                    android:src="@drawable/img"
                     android:layout_gravity="center"/> <!-- Ini memastikan ImageView berada di tengah -->
 
                 <LinearLayout
@@ -61,8 +56,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
+                    android:textSize="20dp"
                     android:textColor="@color/black"
-                    android:text="INI JUDUL YAA"/>
+                    android:text="Bogor Dance"/>
 
 
 <!--                    Alamat-->
@@ -75,13 +71,13 @@
                         <ImageView
                             android:layout_width="14.5dp"
                             android:layout_height="14.5dp"
-                            android:src="@drawable/ic_launcher_background"/>
+                            android:src="@drawable/location"/>
                         <TextView
                             android:layout_marginLeft="3.5dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@color/black"
-                            android:text="Ini Alamat"/>
+                            android:text="Jl. Bina Marga No.5, RT.04/RW.11, Baranangsiang"/>
                     </LinearLayout>
 
 <!--                    Star-->
@@ -94,13 +90,13 @@
                         <ImageView
                             android:layout_width="14.5dp"
                             android:layout_height="14.5dp"
-                            android:src="@drawable/ic_launcher_background"/>
+                            android:src="@drawable/star"/>
                         <TextView
                             android:layout_marginLeft="3.5dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:textColor="@color/black"
-                            android:text="Ini Star"/>
+                            android:text="4.6"/>
                     </LinearLayout>
 
                 </LinearLayout>
@@ -170,7 +166,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="40000"
+                            android:text="40.000"
                             android:textAppearance="?attr/textAppearanceBody1"/>
 
                         <RadioButton
@@ -203,7 +199,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="20000"
+                            android:text="20.000"
                             android:textAppearance="?attr/textAppearanceBody1"/>
 
                         <RadioButton
@@ -249,10 +245,51 @@
                         android:textStyle="bold"
                         android:textSize="15dp"
                         android:text="Ringkasan Pembayaran"/>
-                    <TextView
+
+                    <LinearLayout
+                        android:orientation="horizontal"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Ringkasan Pembayaran"/>
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Biaya sewa studio : "/>
+                        <View
+                            android:layout_width="10dp"
+                            android:layout_height="0dp"
+                            android:background="@color/black"
+                            android:layout_marginTop="0dp"
+                            android:layout_marginBottom="10dp"
+                            />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Rp. 180.000"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Diskon pelanggan : "/>
+                        <View
+                            android:layout_width="10dp"
+                            android:layout_height="0dp"
+                            android:background="@color/black"
+                            android:layout_marginTop="0dp"
+                            android:layout_marginBottom="10dp"
+                            />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Rp. 10.000"/>
+                    </LinearLayout>
+
 
                     <View
                         android:layout_width="match_parent"
@@ -325,7 +362,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="10000000"
+                                android:text="170000"
                                 android:textAppearance="?attr/textAppearanceBody1"/>
                             <View
                                 android:layout_width="0dp"
