--- a/app/src/main/res/layout/booking_page.xml
+++ b/app/src/main/res/layout/booking_page.xml
@@ -16,10 +16,10 @@
             >
 
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginStart="27dp"
-                android:layout_marginTop="36dp"
+                android:layout_marginTop="8dp"
                 android:clickable="true"
                 android:contentDescription="Back to home"
                 android:focusable="true"
@@ -31,7 +31,7 @@
                 android:layout_height="match_parent"
                 android:text="Pilih Jadwal"
                 android:gravity="center"
-                android:layout_marginTop="36dp"
+                android:layout_marginTop="16dp"
                 android:fontFamily="@font/poppins_regular"
                 android:textColor="@color/white"
                 android:textSize="20sp"
@@ -54,12 +54,12 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:layout_marginLeft="27dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginBottom="15dp"
                 >
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
+                    android:id="@+id/DateRecyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
@@ -87,7 +87,7 @@
                 android:layout_height="90dp"
                 android:layout_marginLeft="27dp"
                 android:layout_marginRight="31dp"
-                android:background="@drawable/dark_bg_rounded_10"
+                android:background="@drawable/white_bg_rounded_10"
                 android:clipToOutline="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/studio"
@@ -96,13 +96,121 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center_vertical"
 
+                >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Studio B"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textColor="@color/white"
+
+
+                    ></TextView>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="3 Jadwal tersedia"
+                    android:fontFamily="@font/poppins_regular"
+                    android:textColor="@color/white">
+
+                </TextView>
             </LinearLayout>
 
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+
+            <LinearLayout
+                android:layout_width="346dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="12dp"
+                android:orientation="horizontal">
+
+                <Switch
+                    android:id="@+id/switch_filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:text="Hanya tampilkan jadwal yang tersedia" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="380dp"
+                android:layout_height="380dp"
+                android:background="@drawable/rounded_20"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal"
+                android:padding="3dp"
+                android:clipToPadding="false"
+                >
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/HourRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:layout_margin="15dp"
+                android:background="@drawable/rounded_white_20">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical"
+                    android:padding="5dp">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Total"
+                        android:fontFamily="@font/poppins_regular"
+                        android:textColor="@color/white"
+                        android:textSize="16sp"
+                        android:layout_marginLeft="40dp"
+                        />
+                    <TextView
+                        android:id="@+id/totalPriceTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Rp. 100.000"
+                        android:fontFamily="@font/poppins_regular"
+                        android:textColor="@color/white"
+                        android:textSize="16sp"
+                        android:layout_marginLeft="40dp"
+                        />
+                </LinearLayout>
+
+                <Button
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/orange_bg_rounded_25"
+                    android:gravity="center"
+                    android:text="Bayar"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:layout_gravity="center_vertical|end"
+                    android:stateListAnimator="@animator/lift_on_touch"
+                    android:layout_marginRight="20dp"/>
+            </LinearLayout>
+
+
+        </LinearLayout>
 
     </LinearLayout>
 </ScrollView>
