--- a/app/src/main/res/layout/pembayaran1.xml
+++ b/app/src/main/res/layout/pembayaran1.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Pembayaran1">
 
     <ScrollView
         android:layout_weight="1"
@@ -123,10 +123,9 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
-                    android:background="@color/black"
                     android:layout_marginTop="17dp"
                     android:layout_marginBottom="10dp"
-                    />
+                    android:background="@color/black" />
 
                 <TextView
                     android:layout_width="match_parent"
