--- a/app/src/main/res/layout/activity_pembayaran2.xml
+++ b/app/src/main/res/layout/activity_pembayaran2.xml
@@ -260,12 +260,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="40dp"
-                        android:background="@drawable/spinner_background"
+                        android:background="@drawable/button"
                         android:gravity="center_vertical"
                         android:orientation="vertical"
                         android:padding="10dp">
 
                         <TextView
+                            android:textColor="@color/white"
+                            android:textStyle="bold"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Total biaya"
@@ -283,15 +285,17 @@
                                 android:layout_height="wrap_content"
                                 >
                                 <TextView
+                                    android:textColor="@color/white"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Rp "
                                     android:textAppearance="?attr/textAppearanceBody1" />
 
                                 <TextView
+                                    android:textColor="@color/white"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="170000"
+                                    android:text="185.000"
                                     android:textAppearance="?attr/textAppearanceBody1" />
 
                             </LinearLayout>
