--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,6 +54,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/loginButton"
         android:text="Masuk"
         android:textColor="@color/orange"
         android:layout_marginTop="15dp"
@@ -83,6 +84,7 @@
             android:text="Daftar"/>
 
     </LinearLayout>
+
 
 
 </LinearLayout>
