--- a/app/src/main/res/layout/profil.xml
+++ b/app/src/main/res/layout/profil.xml
@@ -120,7 +120,7 @@
 <!--            android:layout_height="wrap_content"-->
 <!--            android:layout_marginTop="16dp"-->
 <!--            android:background="@drawable/textfiled"-->
-<!--            />-->
+<!--            huhu/>-->
 <!--    </LinearLayout>-->
 
     <LinearLayout
