--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -121,7 +121,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:gravity="center_vertical"
                 android:text="Disekitarmu"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="20dp"></TextView>
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -149,7 +149,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:gravity="center_vertical"
                 android:text="Coba tempat baru"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="20dp"></TextView>
 
             <!--        repeater for card-->
