--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -28,7 +28,7 @@
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/baseline_arrow_back_24"/>
             </FrameLayout>
 
@@ -38,34 +38,13 @@
                 android:layout_centerInParent="true"
                 android:text="Riwayat Pemesanan"
                 android:textColor="@color/black"
-                android:textSize="20sp" />
+                android:textSize="20dp" />
         </RelativeLayout>
 
         <!-- Space between header and buttons -->
         <View
             android:layout_width="match_parent"
             android:layout_height="43dp" />
-
-        <!-- Search Bar -->
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingStart="8dp"
-            android:layout_marginBottom="14dp">
-            <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_gravity="start|center_vertical"
-                android:layout_marginStart="30dp"
-                android:background="@drawable/baseline_search_24"/>
-            <EditText
-                android:layout_width="387dp"
-                android:layout_height="48dp"
-                android:layout_gravity="center"
-                android:text="Dance Bogor"
-                android:paddingStart="60dp"
-                android:background="@drawable/search_bar"/>
-        </FrameLayout>
 
         <!-- Buttons Container -->
         <FrameLayout
@@ -78,72 +57,56 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
-                <!-- Button SEMUA -->
+                <!-- Button SELESAI -->
                 <FrameLayout
-                    android:layout_width="120dp"
-                    android:layout_height="50dp"
-                    android:layout_marginEnd="8dp">
+                    android:layout_width="156.23dp"
+                    android:layout_height="55.18dp">
 
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="50dp"
+                        android:layout_height="53dp"
+                        android:layout_gravity="center"
                         android:background="@drawable/shadow_background"
-                        android:padding="4dp"/>
+                        android:padding="10dp"
+                        android:layout_marginLeft="2dp"/>
 
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/shape_button_selector"
-                        android:elevation="4dp"
+                        android:padding="10dp"
                         android:textColor="@drawable/button_text_color"
-                        android:textSize="16sp"
+                        android:textSize="18sp"
                         android:gravity="center"
-                        android:text="SEMUA" />
+                        android:text="SELESAI" />
                 </FrameLayout>
 
-                <!-- Button TERDEKAT -->
+                <View
+                    android:layout_width="48.77dp"
+                    android:layout_height="0dp" />
+
+                <!-- Button MENUNGGU -->
                 <FrameLayout
-                    android:layout_width="120dp"
-                    android:layout_height="50dp"
-                    android:layout_marginEnd="8dp">
+                    android:layout_width="156.23dp"
+                    android:layout_height="55.18dp">
 
                     <View
                         android:layout_width="match_parent"
-                        android:layout_height="50dp"
+                        android:layout_height="55dp"
+                        android:layout_gravity="center"
                         android:background="@drawable/shadow_background"
-                        android:padding="4dp"/>
+                        android:padding="10dp"
+                        android:layout_marginLeft="2dp"/>
 
                     <Button
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/shape_button_selector_menunggu"
-                        android:elevation="4dp"
+                        android:padding="10dp"
                         android:textColor="@drawable/button_text_color_menunggu"
-                        android:textSize="16sp"
+                        android:textSize="18sp"
                         android:gravity="center"
-                        android:text="TERDEKAT" />
-                </FrameLayout>
-
-                <!-- Button TERMURAH -->
-                <FrameLayout
-                    android:layout_width="120dp"
-                    android:layout_height="50dp">
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:background="@drawable/shadow_background"
-                        android:padding="4dp"/>
-
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/shape_button_selector_menunggu"
-                        android:elevation="4dp"
-                        android:textColor="@drawable/button_text_color_menunggu"
-                        android:textSize="16sp"
-                        android:gravity="center"
-                        android:text="TERMURAH" />
+                        android:text="MENUNGGU" />
                 </FrameLayout>
             </LinearLayout>
         </FrameLayout>
