--- a/app/src/main/res/layout/studio_favorit.xml
+++ b/app/src/main/res/layout/studio_favorit.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:context=".MainActivity">
+        tools:context=".History.HistoryActivity">
 
         <!-- Header with Back Button and Title -->
         <RelativeLayout
