--- a/app/src/main/res/layout/daftar.xml
+++ b/app/src/main/res/layout/daftar.xml
@@ -26,6 +26,8 @@
         <TextView
             android:layout_marginBottom="10dp"
             android:text="Nama Lengkap"
+            android:textSize="16dp"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <EditText
@@ -43,6 +45,8 @@
         <TextView
             android:layout_marginBottom="10dp"
             android:text="Email"
+            android:textSize="16dp"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <EditText
@@ -61,6 +65,8 @@
         <TextView
             android:layout_marginBottom="10dp"
             android:text="Kata Sandi"
+            android:textSize="16dp"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <EditText
@@ -85,6 +91,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="32dp"
+            android:textSize="14dp"
             android:text="Saya telah membaca dan menyetujui Syarat dan Ketentuan yang berlaku."/>
     </LinearLayout>
 
@@ -92,6 +99,7 @@
         android:text="Daftar"
         android:textColor="@color/orange"
         android:layout_marginTop="15dp"
+        android:textSize="16dp"
         android:layout_gravity="center"
         android:background="@drawable/buttonlogin"
         android:layout_width="191dp"
@@ -108,13 +116,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="118dp"
-            android:text="sudah punya akun?"/>
+            android:textSize="14dp"
+            android:text="Sudah punya akun?"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="5dp"
             android:textColor="@color/orange"
+            android:textSize="14dp"
             android:text="Masuk"/>
 
     </LinearLayout>
