--- a/app/src/main/res/layout/ganti_password.xml
+++ b/app/src/main/res/layout/ganti_password.xml
@@ -25,8 +25,9 @@
 
         <TextView
             android:layout_marginBottom="10dp"
-            android:text="Ganti Kata Sandi"
+            android:textSize="20dp"
             android:textStyle="bold"
+            android:text="Ganti Kata Sandi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -38,7 +39,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:orientation="vertical"
@@ -49,6 +50,8 @@
         <TextView
             android:layout_marginBottom="10dp"
             android:text="Kata Sandi Saat Ini"
+            android:textSize="16dp"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -59,6 +62,7 @@
 
         <TextView
             android:text="Lupa kata sandi?"
+            android:textSize="14dp"
             android:textColor="@color/orange"
             android:layout_marginLeft="5dp"
             android:layout_width="wrap_content"
@@ -77,6 +81,8 @@
         <TextView
             android:layout_marginBottom="10dp"
             android:text="Kata Sandi Baru"
+            android:textSize="16dp"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -97,6 +103,8 @@
         <TextView
             android:layout_marginBottom="10dp"
             android:text="Konfirmasi Kata Sandi"
+            android:textSize="16dp"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -109,7 +117,8 @@
     <Button
         android:text="Simpan"
         android:textColor="@color/orange"
-        android:layout_marginTop="240dp"
+        android:textSize="16dp"
+        android:layout_marginTop="200dp"
         android:layout_gravity="center"
         android:background="@drawable/buttonlogin"
         android:layout_width="191dp"
