--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="orange">#FF9035</color>
     <color name="black">#000000</color>
-    <color name="purple_500">#FF6200EE</color>
+    <color name="grey">#40000000</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
