--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,5 +12,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <color name="brown">#331D0B</color>
+        <color name="orange">#FF9035</color>
+        <color name="light_gray">#E0DDDA</color>
     </style>
 </resources>
