--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,8 @@
     <color name="orange">#FF9035</color>
     <color name="black">#000000</color>
     <color name="grey">#40000000</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="brown">#331D0B</color>
+    <color name="light_gray">#E0DDDA</color>
     <color name="teal_700">#FF018786</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
