add dialog reset password

--- a/app/src/main/res/layout/ganti_password.xml
+++ b/app/src/main/res/layout/ganti_password.xml
@@ -115,6 +115,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/button_show_dialog"
         android:text="Simpan"
         android:textColor="@color/orange"
         android:textSize="16dp"
