--- a/app/src/main/res/layout/activity_pembayaran1.xml
+++ b/app/src/main/res/layout/activity_pembayaran1.xml
@@ -233,6 +233,7 @@
                         android:padding="10dp">
 
                         <TextView
+                            android:textSize="15dp"
                             android:textColor="@color/white"
                             android:textStyle="bold"
                             android:layout_width="wrap_content"
@@ -252,6 +253,7 @@
                                 android:layout_height="wrap_content"
                                 >
                                 <TextView
+                                    android:textSize="12dp"
                                     android:textColor="@color/white"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -259,12 +261,12 @@
                                     android:textAppearance="?attr/textAppearanceBody1" />
 
                                 <TextView
+                                    android:textSize="12dp"
                                     android:id="@+id/paymentWatchPrice"
-                                    android:textColor="@color/white"
                                     android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
+                                    android:layout_height="match_parent"
                                     android:text="185.000"
-                                    android:textAppearance="?attr/textAppearanceBody1" />
+                                    android:textColor="@color/white" />
 
                             </LinearLayout>
                             <View
