--- a/app/src/main/res/layout/activity_selected_hours.xml
+++ b/app/src/main/res/layout/activity_selected_hours.xml
@@ -297,6 +297,7 @@
                         android:gravity="center_vertical">
 
                         <TextView
+                            android:textSize="15dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Total biaya"
@@ -308,12 +309,14 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
                             <TextView
+                                android:textSize="12dp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Rp "
                                 android:textAppearance="?attr/textAppearanceBody1"/>
 
                             <TextView
+                                android:textSize="12dp"
                                 android:id="@+id/textViewTotalPrice"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
