--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -119,7 +119,7 @@
                 android:layout_marginLeft="15dp"
                 android:gravity="center_vertical"
                 android:text="Disekitarmu"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="20dp"></TextView>
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -146,7 +146,7 @@
                 android:layout_marginLeft="15dp"
                 android:gravity="center_vertical"
                 android:text="Coba tempat baru"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="20dp"></TextView>
 
             <!--        repeater for card-->
