Update Navbar dan beberapa part punya sarah

--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -23,7 +23,7 @@
         android:title="Chat" />
 
     <item
-        android:id="@+id/bottom_person"
+        android:id="@+id/botton_account"
         android:icon="@drawable/person"
         android:title="Account" />
 
