--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
 
     <color name="gray">#ADADAD</color>
 
-    <color name="colorPrimary">#F49F36</color>
+    <color name="colorPrimary">#FF9035</color>
     <color name="putih">#FFFFFF</color>
     <color name="brown">#331D0B</color>
     <color name="orange">#FF9035</color>
