--- a/app/src/main/res/drawable/orange_bg_rounded_25.xml
+++ b/app/src/main/res/drawable/orange_bg_rounded_25.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="25dp"/>
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@color/orange" />
 <!--    <stroke-->
 <!--        android:width="2dp"-->
 <!--        android:color="@color/black" />-->
