--- a/app/src/main/res/layout/studio_pencarian.xml
+++ b/app/src/main/res/layout/studio_pencarian.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -59,10 +64,11 @@
                 android:layout_marginStart="30dp"
                 android:background="@drawable/baseline_search_24"/>
             <EditText
-                android:layout_width="387dp"
+                android:id="@+id/editTextDanceBogor"
+                android:layout_width="345dp"
                 android:layout_height="48dp"
                 android:layout_gravity="center"
-                android:text="Dance Bogor"
+                android:hint="Dance Bogor"
                 android:paddingStart="60dp"
                 android:background="@drawable/search_bar"/>
         </FrameLayout>
@@ -80,7 +86,7 @@
 
                 <!-- Button SEMUA -->
                 <FrameLayout
-                    android:layout_width="120dp"
+                    android:layout_width="110dp"
                     android:layout_height="50dp"
                     android:layout_marginEnd="8dp">
 
@@ -103,7 +109,7 @@
 
                 <!-- Button TERDEKAT -->
                 <FrameLayout
-                    android:layout_width="120dp"
+                    android:layout_width="110dp"
                     android:layout_height="50dp"
                     android:layout_marginEnd="8dp">
 
@@ -126,7 +132,7 @@
 
                 <!-- Button TERMURAH -->
                 <FrameLayout
-                    android:layout_width="120dp"
+                    android:layout_width="110dp"
                     android:layout_height="50dp">
 
                     <View
@@ -161,3 +167,20 @@
 
     </LinearLayout>
 </ScrollView>
+
+<com.google.android.material.bottomnavigation.BottomNavigationView
+android:id="@+id/bottomNavigation"
+android:layout_width="match_parent"
+android:layout_height="69dp"
+android:layout_gravity="bottom"
+android:layout_marginEnd="20dp"
+android:layout_marginStart="20dp"
+android:layout_marginBottom="10dp"
+android:background="@drawable/bottom_background"
+android:elevation="2dp"
+app:itemIconSize="30dp"
+app:itemIconTint="@drawable/item_selector"
+app:itemRippleColor="@color/default_color"
+app:labelVisibilityMode="unlabeled"
+app:menu="@menu/bottom_menu" />
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
